# pretalx_acronia_rename

./: LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg
.github/workflows/: style.yml
pretalx_acronia_rename/: apps.py  signals.py  views.py
pretalx_acronia_rename/locale/de_Acronia/LC_MESSAGES/: django.po
pretalx_acronia_rename/locale/de_acronia/LC_MESSAGES/: django.po
pretalx_acronia_rename/locale/en_Acronia/LC_MESSAGES/: django.po
pretalx_acronia_rename/locale/en_acronia/LC_MESSAGES/: django.po
pretalx_acronia_rename/templates/pretalx_acronia_rename/: settings.html
